--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,10 @@
   color: #29B1DD;
 }
 
+header h6 {
+  font-size: 18px;
+}
+
 .submenu {
   background-color: #29B1DD;
 }
@@ -11,13 +15,16 @@ main .container {
 }
 
 main .box {
-  background-color: #29B1DD;
-  height: 100px;
+  background-color: #F5F5F5;
+  height: 120px;
   width: 200px;
+  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  box-shadow: 3px 3px 3px 0 rgba(0, 0, 0, .8);
 }
 
 main i {
   font-size: 35px;
 }
-
-
